app/styles/_activities.sass
.activity
  margin: 10px
  font-size: 12px
  +rounded(3px)
  +clearing
  p
    margin: 0
    float: left
  .date
    float: right
    margin-top: 2px
    font-size: 10px
    color: #9DA3A7
  .micro_avatar
    +rounded(3px)
  a
    font-weight: bold
  img
    vertical-align: middle
    margin:
      right: 3px
  .clear
    margin-left: 26px
    padding-bottom: 1px

